@@ -2,12 +2,13 @@ s390-dasd (0.0.7) UNRELEASED; urgency=low
 
   * Bastian Blank
     - Update templates.
+    - Add correct specification to kernel commandline.
   * Christian Perrier
     - Remove jargon in templates
   * Colin Watson
     - Correct spelling of "formatted" (closes: #257174).
 
- -- Christian Perrier <bubulle@kheops.frmug.org>  Mon, 28 Jun 2004 10:24:26 +0200
+ -- Bastian Blank <waldi@debian.org>  Sun, 18 Jul 2004 16:20:43 +0200
 
 s390-dasd (0.0.6) unstable; urgency=low
 
